Secure generated user grants
